--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -13,8 +13,8 @@ title = "Management & Organisational Research Lab"
 baseurl = ""
 
 # Enter a copyright notice to display in the site footer.
-# To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; Research Group"
+# To display a copyright symbol, type `&copy;`. For current year, type `{2021}`.
+copyright = "&copy; All Rights Reserved. Copyrights © Management & Organisational Research Lab Research Group"
 
 ############################
 ## Advanced options below ##
