--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -13,8 +13,8 @@ title = "Management & Organisational Research Lab"
 baseurl = ""
 
 # Enter a copyright notice to display in the site footer.
-# To display a copyright symbol, type `&copy;`. For current year, type `{2021}`.
-copyright = "&copy; Management & Organisational Research Lab. All Rights Reserved."
+# To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
+copyright = "Copyright © 2021, Management & Organisational Research Lab. All Rights Reserved."
 
 ############################
 ## Advanced options below ##
