--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,7 +14,7 @@ baseurl = ""
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "Copyright © 2023, Entrepreneurship and HRM Research Group. All Rights Reserved."
+copyright = "Copyright © 2023, Entrepreneurship and HRM Research Group - Bahrain Polytechnic. All Rights Reserved."
 
 ############################
 ## Advanced options below ##
